<?xml version="1.0"?>
<package format="2">
  <name>lobot_servo</name>
  <version>0.0.1</version>
  
  <description>A library for lobot servo, 
    for Hiwonder/Lewansoul bus servos (htd-45h, etc..)
  </description>
  
  
  <maintainer email="randelmc21gmail.com">Randel Capati</maintainer>
  <maintainer email="xiao@mogi.io">xiao</maintainer>
  <license>Apache License 2.0</license>
  <author>Randel Capati</author>
  <author>Xiao Qin</author>
  

  <!-- <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
